<resources>
    <string name="tituloCuadrado">Cuadrado</string>
    <string name="anchoCuadrado">Ancho</string>
    <string name="alturaCuadrado">Altura</string>
    <string name="calculoCuadradoButton">Calcular</string>
    <string name="nadaCuadrado" />
    <string name="app_name">My Features App</string>
    <string name="perimetro">Perímetro en cm</string>
    <string name="apotema">Apotema en cm</string>
    <string name="Calcule_button">Calcular área</string>
    <string name="Obligatorio">*Campo Obligatorio</string>
    <string name="empty" />
    <string name="titulo_my_feature">Área de un pentágono</string>
    <string name="title_text_view">Perimetro del círculo</string>
    <string name="P_circulo_button">PERIMETRO</string>
    <string name="Radio">Ingrese el radio del círculo en cm</string>
    <string name="calcular">CALCULAR PERIMETRO</string>
    <string name="total">El perimetro del círculo es:  </string>
    <string name="Base">Base en cm</string>
    <string name="altura">Altura en cm</string>
    <string name="button_text">Calcular Perimetro</string>
    <string name="texto_principal">Perímetro del rectángulo</string>
    <string name="lado_cuadrado">Lado</string>
    <string name="calcularbotoncuadrado">"Calcular "</string>
    <string name="calculate_area_hexagono">Calcular área hexágono</string>
    <string name="area_hexagono">Área del hexágono</string>
    <string name="lado_hexagono">Lado hexágono en cm</string>
    <string name="campo_obligatorio_area_hexagono">*Campo obligatorio</string>
    <string name="area_hexagono_result">El área del hexágono es:</string>
    <string name="invalid_input_hexagono">Ingrese un valor válido</string>
    <string name="Perimetro_pentagono_text">Perimetro Pentagono</string>
    <string name="lado_pentagono">Longitud de uno de los lados en cm</string>
    <string name="pentagonoP_Obligatorio">*Caampo obligatorio</string>
    <string name="calcular_perimetro_pentagono_text">Calcular Perimetro</string>
    <string name="Descripción_imagen_pentagono">Imagen pentagono</string>
    <string name="title_my_feature">Área de un pentágono</string>
    <string name="title_Area_Triangulo_view">Area Del Triángulo</string>
    <string name="A_Triangulo_button">PERIMETRO</string>
    <string name="Base_Area_Triangulo">Ingrese la base del triángulo en cm</string>
    <string name="Altura_Area_Triangulo">Ingrese la Altura del triángulo en cm</string>
    <string name="calcular_Area_Triangulo">CALCULAR AREA</string>
    <string name="total_Area_Triangulo">El área del triángulo es:  </string>
    <string name="area_rectangulo_text">Área del rectángulo</string>
</resources>
