<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.area_cuadro.AreaCuadradoActivity">

        <TextView
            android:id="@+id/titulo_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tituloCuadrado"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cuadrado_imageView"
            android:layout_width="match_parent"
            android:layout_height="291dp"
            app:srcCompat="@drawable/cuadrado" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:helperText="@string/Obligatorio"
            app:startIconDrawable="?android:attr/actionModeFindDrawable">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lado_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lado_cuadrado" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/calcu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcularbotoncuadrado" />

        <TextView
            android:id="@+id/peri_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>