<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/area_hexagono_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/area_hexagono"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/area_hexagono_image_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/hexagono" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lado_hexagono_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/campo_obligatorio_area_hexagono"
        app:startIconDrawable="?android:attr/actionModeFindDrawable">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lado_area_hexagono_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lado_hexagono"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/area_hexagono_calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_area_hexagono" />

    <TextView
        android:id="@+id/area_hexagono_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>